--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vitest --environment jsdom"
   },
   "dependencies": {
+    "sass": "^1.57.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
